# action-utils

./: pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: repo-jobs.yml
src/orf_utils/: check_submodule_commits.py  check_version.py  common.py  get_team_approval_status.py  tag_commit.py
src/orf_utils/mocks/: gitpython_utils.py  pygithub_utils.py
tests/: test_check_version.py  test_get_team_approval_status.py
